# mpsanity

./: .gitignore  BUILD.bazel  WORKSPACE  asset.go  client.go  doc.go  go.mod  go.sum  mutate.go  query.go  result.go  trace.go  types.go
block/: BUILD.bazel  block.go  builder.go  code.go  markdown.go  markdown_test.go  tweet.go  youtube.go
cmd/mpsanity/: BUILD.bazel  main.go
example/cmd/test-sanity/: BUILD.bazel  main.go
mpapi/: BUILD.bazel  auth.go  config.go  create.go  document.go  error.go  form.go  json.go  media.go  micropub.go  props.go  rand_string.go  serve.go  trace.go  update.go  webhook.go
patch/: BUILD.bazel  patch.go
