load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mjm/mpsanity
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "asset.go",
        "client.go",
        "doc.go",
        "mutate.go",
        "query.go",
        "result.go",
        "trace.go",
        "types.go",
    ],
    importpath = "github.com/mjm/mpsanity",
    visibility = ["//visibility:public"],
    deps = [
        "//patch:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/key:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
    ],
)
