load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "config.go",
        "document.go",
        "error.go",
        "form.go",
        "json.go",
        "media.go",
        "micropub.go",
        "rand_string.go",
        "serve.go",
        "trace.go",
    ],
    importpath = "github.com/mjm/mpsanity/mpapi",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//block:go_default_library",
        "@com_github_gosimple_slug//:go_default_library",
        "@com_github_mjm_courier_js//pkg/tracehttp:go_default_library",
        "@io_opentelemetry_go_otel//api/global:go_default_library",
        "@io_opentelemetry_go_otel//api/key:go_default_library",
        "@io_opentelemetry_go_otel//api/trace:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
