load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mjm/mpsanity/example/cmd/test-sanity",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//block:go_default_library",
    ],
)

go_binary(
    name = "test-sanity",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
